--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1565,6 +1565,14 @@ input[type="submit"] {
 .project-offer a:hover {
   color: #00aeef;
 }
+.about-info,
+.about-community {
+  overflow: hidden;
+}
+.about-info img,
+.about-community img {
+  width: 100%;
+}
 .team {
   margin-top: 1em;
   margin-bottom: 3em;
@@ -1742,6 +1750,10 @@ input[type="submit"] {
   .services .expanded .projects-link:hover,
   .difference .expanded .projects-link:hover {
     background-color: rgba(0,0,0,0.5);
+  }
+  .about-info img,
+  .about-community img {
+    width: 300px;
   }
   .footer-logo {
     float: left;
