--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -696,7 +696,12 @@ button,input[type="submit"]
 		a
 			&:hover
 				color celeste		
-	
+.about 
+	&-info
+	&-community
+		overflow hidden
+		img 
+			width 100%	
 .team
 	margin-top 1em
 	margin-bottom 3em
