--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -61,6 +61,13 @@
 			.projects-link
 				&:hover
 					background-color rgba(0, 0, 0, 0.5)
+	.about 
+		&-info
+		&-community	
+			img 
+				
+				width 300px	
+
 	.footer
 		&-logo
 			float left 
