--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -530,7 +530,7 @@ button,input[type="submit"]
 		text-shadow 1px 1px 2px rgba(0, 0, 0, .75)
 
 	&-description
-		color #e3e3e3
+		color #FFF//#e3e3e3
 		opacity 0
 		transform translateZ(-30px)
 		transition background-color 0.5s, opacity 0.2s, transform 0.2s
