--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -199,7 +199,7 @@ button,input[type="submit"]
 			display none !important
 
 	.nav-child
-		display none
+		display block
 		li
 			a
 				color white
