--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -959,6 +959,20 @@ input[type="submit"] {
   right: 2em;
   bottom: 2em;
 }
+.contact-social a {
+  display: inline-block;
+  background: #787878;
+  font-size: 1.5rem;
+  text-decoration: none !important;
+  padding: 0.5rem;
+  color: #fff !important;
+}
+.contact-social a:first-child {
+  padding: 0.5rem 0.8rem;
+}
+.contact-social a:hover {
+  background-color: #00aeef !important;
+}
 .b2j_contact {
   background: #fff !important;
 }
