--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -407,6 +407,19 @@ button,input[type="submit"]
 		position static
 		right 2em
 		bottom 2em
+	&-social
+		a 
+			display inline-block
+			background gris
+			font-size 1.5rem
+			text-decoration none !important
+			padding .5rem
+			color white !important
+			&:first-child
+				padding .5rem .8rem
+				
+			&:hover
+				background-color celeste !important
 
 .b2j_contact
 	background #FFF !important
