--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -382,6 +382,9 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .partners-item{display:inline-block;padding:.3em}
 .build-green-gallery,.build-smart-gallery{text-align:center}
 .contact-info{position:static;right:2em;bottom:2em}
+.contact-social a{display:inline-block;background:#787878;font-size:1.5rem;text-decoration:none!important;padding:.5rem;color:#fff!important}
+.contact-social a:first-child{padding:.5rem .8rem}
+.contact-social a:hover{background-color:#00aeef!important}
 .b2j_contact{background:#fff!important}
 .b2jcontainer h2{background:#00aeef}
 .b2jcontainer .btn{background:#2c323b!important;padding:.5rem!important;height:auto!important}
