--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -553,7 +553,10 @@ button,input[type="submit"]
 
 .services
 .difference
+	&-container
+		background url('../img/bg_portafolio.png')
 	.projects
+		
 		&-link
 			background-color rgba(0, 0, 0, 0.5)
 			opacity 1
