cambio del line-height en fast green ...

--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -400,6 +400,10 @@ button,input[type="submit"]
 		padding .3em
 .build-smart
 .build-green
+	ul
+		li  
+			line-height 20px
+			margin-bottom 1em
 	&-gallery
 		text-align center		
 .contact
