--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -950,6 +950,11 @@ input[type="submit"] {
   display: inline-block;
   padding: 0.3em;
 }
+.build-smart ul li,
+.build-green ul li {
+  line-height: 20px;
+  margin-bottom: 1em;
+}
 .build-smart-gallery,
 .build-green-gallery {
   text-align: center;
