--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -319,7 +319,12 @@ button,input[type="submit"]
 .bgid-107
 	.offers
 		margin-top -25px
-
+.bgid-109
+	.partners
+		margin-top -60px
+		float right
+		a 
+			width 89px
 
 .green-build
 	overflow hidden
@@ -398,6 +403,7 @@ button,input[type="submit"]
 	&-item 
 		display inline-block
 		padding .3em
+		vertical-align middle
 .build-smart
 .build-green
 	ul
