fix el problema en mobile

--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -594,6 +594,7 @@ button,input[type="submit"]
 		&-description
 			display none
 	.expanded
+		//height 324px
 		/*.projects-center-info
 			h4
 				font-size 1rem*/
