--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -321,8 +321,7 @@ button,input[type="submit"]
 		margin-top -25px
 .bgid-109
 	.partners
-		margin-top -60px
-		float right
+		
 		a 
 			width 89px
 
@@ -416,7 +415,8 @@ button,input[type="submit"]
 	&-info
 		position static
 		right 2em
-		bottom 2em
+		bottom 7em
+		margin-bottom 1em
 	&-social
 		a 
 			display inline-block
@@ -430,12 +430,14 @@ button,input[type="submit"]
 				
 			&:hover
 				background-color celeste !important
+	&-message
+		width 100%
 
 .b2j_contact
 	background #FFF !important
 .b2jcontainer
 	h2
-		background celeste
+		background azul
 	.btn
 		background azul_oscuro !important
 		padding .5rem !important
@@ -497,7 +499,7 @@ button,input[type="submit"]
 		left 0
 		width 100%
 		height 100%
-		background-color rgba(0, 0, 0, 0.5)//background rgba(0, 0, 0, 0)
+		background-color rgba(0, 0, 0, 0.6)//background rgba(0, 0, 0, 0)
 		opacity 1//opacity 0
 		transition background 0.5s 0.5s, opacity 0.5s 0.5s
 
@@ -568,7 +570,7 @@ button,input[type="submit"]
 	.projects
 		
 		&-link
-			background-color rgba(0, 0, 0, 0.5)
+			background-color rgba(0, 0, 0, 0.6)
 			opacity 1
 			transition background 0.2s, opacity 0.2s
 			cursor pointer
