--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -1,4 +1,10 @@
 @media only screen and (min-width: 640px)
+	.bgid-109
+		.partners
+			margin-top -60px
+			float right
+			
+			
 	.benefits
 		&-tabs
 			ul
@@ -25,7 +31,7 @@
 			opacity 0
 			
 			&:hover
-				background-color rgba(0, 0, 0, 0.5)
+				background-color rgba(0, 0, 0, 0.6)
 				opacity 1
 				transition background 0.2s, opacity 0.2s
 
@@ -60,7 +66,7 @@
 					font-size 4rem
 			.projects-link
 				&:hover
-					background-color rgba(0, 0, 0, 0.5)
+					background-color rgba(0, 0, 0, 0.6)
 	.about 
 		&-info
 		&-community	
@@ -156,7 +162,9 @@
 	.contact
 		&-info
 			position absolute
-
+		&-message
+			//margin-left -158px
+			width 64%
 
 
 	.testimonials
