--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -877,10 +877,6 @@ input[type="submit"] {
 .bgid-107 .offers {
   margin-top: -25px;
 }
-.bgid-109 .partners {
-  margin-top: -60px;
-  float: right;
-}
 .bgid-109 .partners a {
   width: 89px;
 }
@@ -970,7 +966,8 @@ input[type="submit"] {
 .contact-info {
   position: static;
   right: 2em;
-  bottom: 2em;
+  bottom: 7em;
+  margin-bottom: 1em;
 }
 .contact-social a {
   display: inline-block;
@@ -986,11 +983,14 @@ input[type="submit"] {
 .contact-social a:hover {
   background-color: #00aeef !important;
 }
+.contact-message {
+  width: 100%;
+}
 .b2j_contact {
   background: #fff !important;
 }
 .b2jcontainer h2 {
-  background: #00aeef;
+  background: #446a8d;
 }
 .b2jcontainer .btn {
   background: #2c323b !important;
@@ -1064,7 +1064,7 @@ input[type="submit"] {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
   opacity: 1;
   -ms-filter: none;
   filter: none;
@@ -1215,7 +1215,7 @@ input[type="submit"] {
 }
 .services .projects-link,
 .difference .projects-link {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
   opacity: 1;
   -ms-filter: none;
   filter: none;
@@ -1701,6 +1701,10 @@ input[type="submit"] {
   color: #8dc63f;
 }
 @media only screen and (min-width: 640px) {
+  .bgid-109 .partners {
+    margin-top: -60px;
+    float: right;
+  }
   .benefits-tabs ul {
     float: right;
   }
@@ -1721,7 +1725,7 @@ input[type="submit"] {
     filter: alpha(opacity=0);
   }
   .projects-link:hover {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.6);
     opacity: 1;
     -ms-filter: none;
     filter: none;
@@ -1780,7 +1784,7 @@ input[type="submit"] {
   }
   .services .expanded .projects-link:hover,
   .difference .expanded .projects-link:hover {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.6);
   }
   .about-info img,
   .about-community img {
@@ -1893,6 +1897,9 @@ input[type="submit"] {
   }
   .contact-info {
     position: absolute;
+  }
+  .contact-message {
+    width: 64%;
   }
   .testimonials {
     background: #f4f4f4;
