cambios contact us

--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1899,6 +1899,7 @@ input[type="submit"] {
     position: absolute;
   }
   .contact-message {
+    margin-left: -158px;
     width: 64%;
   }
   .testimonials {
