--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -432,10 +432,15 @@ button,input[type="submit"]
 				background-color celeste !important
 	&-message
 		width 100%
+		b 
+			color red
 
 .b2j_contact
 	background #FFF !important
 .b2jcontainer
+	> div
+		> label
+			width 0 
 	h2
 		background azul
 	.btn
